# FlyinKeeb

./: .gitignore  CMakeLists.txt
src/c/: .clang-format  CMakeLists.txt  i2c.cpp  i2c.h  keyboard.c  keyboard.cpp  keyboard.h  main.c  main.h  tusb_config.h
src/circuitpy/: main.py
